--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,272 @@
-# Environment Variables (CRITICAL - Protects your MongoDB credentials)
+# ========================================
+# ENVIRONMENT VARIABLES (CRITICAL - Protects your MongoDB credentials and API keys)
+# ========================================
+# Backend environment files
 backend/.env
 backend/.env.local
 backend/.env.development.local
 backend/.env.test.local
 backend/.env.production.local
 
-# Dependencies
+# Frontend environment files (Vite)
+frontend/.env
+frontend/.env.local
+frontend/.env.development
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+# Global .env files (fallback protection)
+.env
+.env.local
+.env.*.local
+
+
+# ========================================
+# DEPENDENCIES
+# ========================================
+# Backend dependencies
 backend/node_modules/
 backend/npm-debug.log*
 backend/yarn-debug.log*
 backend/yarn-error.log*
 backend/package-lock.json
 
-# Logs
+# Frontend dependencies
+frontend/node_modules/
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/package-lock.json
+
+# Global node_modules
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+# ========================================
+# BUILD OUTPUTS
+# ========================================
+# Backend build directories
+backend/build/
+backend/dist/
+
+# Frontend build directories (Vite/React)
+frontend/build/
+frontend/dist/
+frontend/out/
+
+# Global build patterns
+build/
+dist/
+out/
+
+
+# ========================================
+# LOGS
+# ========================================
+# Backend logs
 backend/logs/
 backend/*.log
 
-# Runtime data
+# Frontend logs
+frontend/logs/
+frontend/*.log
+
+# Global logs
+logs/
+*.log
+lerna-debug.log*
+.pnpm-debug.log*
+
+
+# ========================================
+# RUNTIME DATA
+# ========================================
+# Backend runtime
 backend/pids/
 backend/*.pid
 backend/*.seed
 backend/*.pid.lock
 
-# Coverage directory
+# Frontend runtime
+frontend/pids/
+frontend/*.pid
+frontend/*.seed
+frontend/*.pid.lock
+
+
+# ========================================
+# COVERAGE AND TESTING
+# ========================================
+# Backend coverage
 backend/coverage/
 backend/.nyc_output
 
-# Optional npm cache directory
-backend/.npm
+# Frontend coverage
+frontend/coverage/
+frontend/.nyc_output
 
-# Optional eslint cache
+# Global coverage
+coverage/
+.nyc_output
+
+
+# ========================================
+# CACHE DIRECTORIES
+# ========================================
+# Backend cache
+backend/.npm
 backend/.eslintcache
 
-# Build directories
-backend/build/
-backend/dist/
+# Frontend cache (Vite specific)
+frontend/.npm
+frontend/.eslintcache
+frontend/.vite/
+frontend/.cache/
 
-# Temporary folders
+# Global cache
+.npm
+.eslintcache
+.vite/
+.cache/
+
+
+# ========================================
+# TEMPORARY FOLDERS
+# ========================================
+# Backend temporary
 backend/tmp/
 backend/temp/
 
-# IDE and Editor files
+# Frontend temporary
+frontend/tmp/
+frontend/temp/
+
+# Global temporary
+tmp/
+temp/
+
+
+# ========================================
+# IDE AND EDITOR FILES
+# ========================================
+# Backend IDE files
 backend/.vscode/
 backend/.idea/
 backend/*.swp
 backend/*.swo
 
-# OS generated files
+# Frontend IDE files
+frontend/.vscode/
+frontend/.idea/
+frontend/*.swp
+frontend/*.swo
+
+# Global IDE patterns
+.vscode/
+.idea/
+*.swp
+*.swo
+*.sublime-project
+*.sublime-workspace
+
+
+# ========================================
+# OS GENERATED FILES
+# ========================================
+# macOS
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
+
+# Windows
 ehthumbs.db
 Thumbs.db
 Desktop.ini
-$RECYCLE_BIN/
+$RECYCLE.BIN/
 
-# Global patterns
-node_modules/
-*.log
-.env
+# Linux
+*~
+
+
+# ========================================
+# DEPLOYMENT RELATED
+# ========================================
+# Vercel (Frontend deployment)
+frontend/.vercel
+.vercel
+
+# Render (Backend deployment) - Keep render.yaml but ignore sensitive files
+backend/.render/
+
+# Next.js (if using Next.js for frontend)
+frontend/.next/
+.next/
+
+
+# ========================================
+# FRONTEND SPECIFIC (Vite/React)
+# ========================================
+# Vite dev server files
+frontend/vite.config.js.timestamp-*
+frontend/vite.config.ts.timestamp-*
+
+# React/Vite hot reload
+frontend/.vite-inspect/
+
+# Storybook (if using)
+frontend/storybook-static/
+
+# TypeScript (if using TypeScript)
+frontend/*.tsbuildinfo
+
+
+# ========================================
+# BACKEND SPECIFIC (Node.js/Express)
+# ========================================
+# PM2 (if using PM2 for process management)
+backend/ecosystem.config.js
+backend/.pm2/
+
+# Webpack (if using custom webpack config)
+backend/webpack-stats.json
+
+
+# ========================================
+# SECURITY FILES (Never commit these)
+# ========================================
+# SSL certificates
+*.pem
+*.key
+*.crt
+*.csr
+
+# Database files (if using local DB)
+*.db
+*.sqlite
+*.sqlite3
+
+# Configuration files with secrets
+config/secrets.js
+config/secrets.json
+
+
+# ========================================
+# KEEP THESE FILES (Don't ignore)
+# ========================================
+# Deployment configs - KEEP THESE
+!render.yaml
+!vercel.json
+!package.json
+!frontend/package.json
+!backend/package.json
+
+# Environment templates - KEEP THESE
+!frontend/.env.example
+!backend/.env.example
+!.env.example
