--- a/vercel.json
+++ b/vercel.json
@@ -19,8 +19,7 @@
       "dest": "/frontend/index.html"
     }
   ],
-  "env": {
-    "NODE_ENV": "production",
-    "VITE_API_BASE_URL": "https://whatsapp-backend-tsoe.onrender.com"
-  }
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "frontend/dist",
+  "installCommand": "cd frontend && npm install"
 }
