--- a/backend/package.json
+++ b/backend/package.json
@@ -4,39 +4,37 @@
   "description": "WhatsApp Web Clone Backend API",
   "main": "server.js",
   "type": "module",
-  "engines": {
-    "node": "18.x",
-    "npm": "9.x"
-  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "process-webhooks": "node scripts/processWebhooks.js",
-    "process-webhooks-clear": "node scripts/processWebhooks.js --clear",
-    "fix-names": "node scripts/fixContactNames.js",
+    "build": "echo 'Build completed'",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "compression": "^1.7.4",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^6.10.0",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "keywords": [
     "whatsapp",
     "clone", 
-    "chat",
     "messaging",
+    "backend",
+    "api",
     "nodejs",
-    "express"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.21.2",
-    "mongoose": "^8.17.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "helmet": "^8.1.0",
-    "morgan": "^1.10.1",
-    "body-parser": "^2.2.0",
-    "compression": "^1.7.4"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+    "express",
+    "mongodb"
+  ]
 }
